Rewrite IsValidFor() for selection-like classes on top of PositionTemplate::IsValidFor()

This patch does the above mentioned change to reduce code duplication and fix
potential issues with IsOrphan() in flat tree.

Bug: 761173
Change-Id: I673db3adb123a208d2d5c844c132ec4fe6bffd16
Reviewed-on: https://chromium-review.googlesource.com/707685
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507698}
Former-commit-id: c776b44dbdbc578fc5c05bdcd966251a50e9abe8