third_party/WebKit/Source/core/editing/commands/SelectionForUndoStep.cpp
@@ -95,9 +95,7 @@ bool SelectionForUndoStep::IsRange() const {
 bool SelectionForUndoStep::IsValidFor(const Document& document) const {
   if (base_.IsNull())
     return true;
-  if (base_.IsOrphan() || extent_.IsOrphan())
-    return false;
-  return base_.GetDocument() == document && extent_.GetDocument() == document;
+  return base_.IsValidFor(document) && extent_.IsValidFor(document);
 }
 
 DEFINE_TRACE(SelectionForUndoStep) {
